Cleanup docs and sidebar

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,49 @@
-# Environment Variables Configuration
+# Environment Variables
 
-# Database (PostgreSQL via Prisma)
-DATABASE_URL="postgresql://user:password@localhost:5432/qabot_db"
+# Database (SQLite by default)
+DATABASE_URL="file:./prisma/database.db"
+# DATABASE_MIGRATION_URL="file:./prisma/database.db" # optional
 
-# API Keys
-JIRA_BASE_URL="https://your-domain.atlassian.net"
+# Auth
+JWT_SECRET="change-me"
+JWT_EXPIRES_IN="7d"
+BCRYPT_ROUNDS="10"
+
+# Optional fallback tokens (if per-user settings are not configured)
+JIRA_BASE_URL="https://your-company.atlassian.net"
 JIRA_USER="your-email@company.com"
 JIRA_API_TOKEN="your-jira-api-token"
-JIRA_BOARD_IDS="123,456"
-JIRA_SPRINT_FIELD_ID="customfield_10020"
+JIRA_BOARD_IDS="123,456" # optional
+JIRA_STORY_POINTS_FIELD_ID="customfield_10020" # optional override
 JIRA_REQUEST_TIMEOUT="30000"
-JIRA_OAUTH_CLIENT_ID="your-atlassian-client-id"
-JIRA_OAUTH_CLIENT_SECRET="your-atlassian-client-secret"
-JIRA_OAUTH_REDIRECT_URI="http://localhost:3000/api/integrations/jira/oauth/callback"
-JIRA_OAUTH_SCOPES="read:jira-work read:jira-user offline_access"
+
+CONFLUENCE_BASE_URL="https://your-company.atlassian.net/wiki"
+CONFLUENCE_USER="your-email@company.com"
+CONFLUENCE_API_TOKEN="your-confluence-api-token"
 
 GITHUB_TOKEN="your-github-personal-access-token"
 GITHUB_BASE_URL="https://api.github.com"
 
-CONFLUENCE_BASE_URL="https://your-domain.atlassian.net/wiki"
-CONFLUENCE_USER="your-email@company.com"
-CONFLUENCE_API_TOKEN="your-confluence-api-token"
+# Optional Jira OAuth (if enabled)
+JIRA_OAUTH_CLIENT_ID=""
+JIRA_OAUTH_CLIENT_SECRET=""
+JIRA_OAUTH_REDIRECT_URI="http://localhost:3000/api/integrations/jira/oauth/callback"
+JIRA_OAUTH_SCOPES="read:jira-work read:jira-user offline_access"
 
-# AI Services
-OPENAI_API_KEY="your-openai-api-key"
-GEMINI_API_KEY="your-gemini-pro-api-key"
-
-# Authentication & Security
-JWT_SECRET="your-super-secret-jwt-key-change-in-production"
-JWT_EXPIRES_IN="7d"
-BCRYPT_ROUNDS="10"
+# AI (OpenAI-compatible)
+OPENAI_API_KEY="your-ai-api-key"
+OPENAI_MODEL="gpt-5.2"
 
 # Application
 NEXT_PUBLIC_API_URL="http://localhost:3000"
 NODE_ENV="development"
 
-# CI/CD Webhooks
-GITHUB_WEBHOOK_SECRET="your-github-webhook-secret"
-CI_WEBHOOK_SECRET="your-ci-webhook-secret"
+# Webhooks (optional)
+GITHUB_WEBHOOK_SECRET=""
+JIRA_WEBHOOK_SECRET=""
+CI_WEBHOOK_SECRET=""
 
-# Feature Flags
+# Feature flags (optional)
 ENABLE_SEMANTIC_SEARCH=true
 ENABLE_CI_CD_INTEGRATION=true
 ENABLE_CONFLUENCE_PUBLISHING=true
